fixed timestamp bug, added some test wrap and finalized the project

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -81,6 +81,7 @@ body {
     margin-top: 20px;
     border-radius: 5px;
     border: 1px solid grey;
+    word-break: break-all;
 }
 
 .tweet-container .tweet {
